--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,84 @@
-requests>=2.25.0
-Pillow>=9.0.0
-googletrans>=3.0.0
-praw>=7.0.0
-gtts>=2.2.0
-edge-tts
-openai>=1.0.0  # Versión actualizada para compatibilidad con DeepSeek
-imageio-ffmpeg
-decorator>=4.0.2
-proglog
-tqdm
-httpx>=0.24.0
-colorama>=0.4.4
-deep-translator>=1.9.0
-whisper>=1.0.0
-spacy>=3.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpathlib==0.21.1
+colorama==0.4.6
+confection==0.1.5
+cymem==2.0.11
+decorator==5.2.1
+deep-translator==1.11.4
+distro==1.9.0
+edge-tts==7.0.2
+es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
+frozenlist==1.7.0
+googletrans==4.0.2
+gTTS==2.5.4
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+imageio-ffmpeg==0.6.0
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.4.4
+murmurhash==1.0.13
+nltk==3.9.1
+numpy==2.3.0
+openai==1.86.0
+packaging==25.0
+pillow==11.2.1
+praw==7.8.1
+prawcore==2.4.0
+preshed==3.0.10
+proglog==0.1.12
+propcache==0.3.2
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+regex==2024.11.6
+requests==2.32.4
+rich==14.0.0
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+srt==3.5.3
+tabulate==0.9.0
+thinc==8.3.6
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+update-checker==0.18.0
+urllib3==2.4.0
+wasabi==1.1.3
+weasel==0.4.1
+websocket-client==1.8.0
+whisper==1.1.10
+wrapt==1.17.2
+yarl==1.20.1
