--- a/requirements.txt
+++ b/requirements.txt
@@ -4,28 +4,40 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+bcrypt==3.2.0
 beautifulsoup4==4.13.4
 blis==1.3.0
+Brotli==1.1.0
 catalogue==2.0.10
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 cloudpathlib==0.21.1
 colorama==0.4.6
 confection==0.1.5
+cryptography==45.0.3
 cymem==2.0.11
+debugpy==1.8.14
 decorator==5.2.1
 deep-translator==1.11.4
 distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
 edge-tts==7.0.2
+email_validator==2.2.0
 es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
+fastapi==0.115.12
+fastapi-cli==0.0.7
 frozenlist==1.7.0
 googletrans==4.0.2
+greenlet==3.2.2
 gTTS==2.5.4
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
@@ -33,30 +45,56 @@ imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 jiter==0.10.0
 joblib==1.5.1
+keyboard==0.13.5
 langcodes==3.5.0
 language_data==1.3.0
+libretranslatepy==2.1.1
+lxml==5.3.1
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+MouseInfo==0.1.3
 multidict==6.4.4
 murmurhash==1.0.13
+mutagen==1.47.0
+mysql-connector-python==9.3.0
 nltk==3.9.1
 numpy==2.3.0
 openai==1.86.0
+orjson==3.10.18
 packaging==25.0
+passlib==1.7.4
 pillow==11.2.1
 praw==7.8.1
 prawcore==2.4.0
 preshed==3.0.10
 proglog==0.1.12
 propcache==0.3.2
+pyasn1==0.4.8
+PyAutoGUI==0.9.54
+pycparser==2.22
+pycryptodomex==3.20.0
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
+PyGetWindow==0.0.9
 Pygments==2.19.1
+PyMsgBox==1.0.9
+PyMySQL==1.1.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
+pytweening==1.2.0
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
 rich==14.0.0
+rich-toolkit==0.14.6
+rsa==4.9.1
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
@@ -66,19 +104,27 @@ soupsieve==2.7
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.41
 srsly==2.5.1
 srt==3.5.3
+starlette==0.46.2
 tabulate==0.9.0
 thinc==8.3.6
 tqdm==4.67.1
+translate==3.6.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+ujson==5.10.0
 update-checker==0.18.0
 urllib3==2.4.0
+uvicorn==0.34.2
 wasabi==1.1.3
+watchfiles==1.0.5
 weasel==0.4.1
 websocket-client==1.8.0
+websockets==12.0
 whisper==1.1.10
 wrapt==1.17.2
 yarl==1.20.1
+yt-dlp==2024.4.9
