--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ httptools==0.6.4
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+imageio==2.37.0
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 jiter==0.10.0
@@ -55,6 +56,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 MouseInfo==0.1.3
+moviepy==2.2.1
 multidict==6.4.4
 murmurhash==1.0.13
 mutagen==1.47.0
@@ -65,6 +67,9 @@ openai==1.86.0
 orjson==3.10.18
 packaging==25.0
 passlib==1.7.4
+pexels-api==1.0.1
+pexels-api-py==0.0.5
+pexelsapi==1.0.0
 pillow==11.2.1
 praw==7.8.1
 prawcore==2.4.0
